--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Doctors#show</h1>
-<p>Find me in app/views/doctors/show.html.erb</p>
+<h1><%= @doctor.name %></h1> 
+<h3><%= @doctor.department %></h3>
+
+<% @doctor.appointment,.each do |appt| %>
+<p>
+  <%= appt.appt_datetime %> <%= link_to appt.patient.name, patient_path(appt.patient) %>
+</p>
+
+<% end %>
