--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Doctors#index</h1>
-<p>Find me in app/views/doctors/index.html.erb</p>
+<h1>Doctors</h1>
+
+<% @doctors.all.each do |doctor| %>
+<p>
+  <%= link_to doctor.name, doctor_path(doctor) %> - <%= doctor.patients.count %>
+</p>
+<% end %>
