--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Patients#index</h1>
-<p>Find me in app/views/patients/index.html.erb</p>
+<h1> Patients</h1>
+
+<ul>
+  <% @@patients.all.each do |patient| %>
+  <li> Name: <%= link_to patient.name, patient_path(patient) %> Number of Appointments: <%= patient.appointment.count %></li>
+<% end %>
+</ul>
