--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @patient.name %></h1>
 
-<% @patient.appointment.each do |appt| %>
+<% @patient.appointments.each do |appt| %>
 <p>
   <%= appt.appt_datetime %> <%= link_to appt.doctor.name, doctor_path(appt.doctor) %>
 </p>
