Automatically backed up by Learn

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @patients.all.each do |patient| %>
-  <li> Name: <%= link_to patient.name, patient_path(patient) %> Number of Appointments: <%= patient.appointment.count %></li>
+  <li> Name: <%= link_to patient.name, patient_path(patient) %> Number of Appointments: <%= patient.appointments.count %></li>
 <% end %>
 </ul>
