--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @doctor.name %></h1>
 <h3><%= @doctor.department %></h3>
 
-<% @doctor.appointment,.each do |appt| %>
+<% @doctor.appointments.each do |appt| %>
 <p>
   <%= appt.appt_datetime %> <%= link_to appt.patient.name, patient_path(appt.patient) %>
 </p>
